@@ -8,7 +8,7 @@ a:hover 			{color:#000;}
 ok					{display:none;}
 query				{display:none;}
 iati-activity *		{display:none;}
-iati-activity		{display:block; width:958px; margin:0 auto; margin-bottom:320px; background-color:#fff; border:1px solid #000;}
+iati-activity		{display:block; width:958px; margin:0 auto; margin-bottom:320px; background-color:#fff; border:1px solid #000; word-break:break-word;}
 iati-activity:after {content:"Data is sourced from IATI for D-Portal. If you find anything out of place, please contact the development team - support@iatistandard.org"; font-size:14px; color:#000; display:block; padding:15px 0; text-align:center;}
 
 
@@ -37,7 +37,7 @@ span.span_span-title span-title:before	{content:"PROJECT TITLE"; font-size:14px;
 
 /*	IATI Identifier
 	============================================= */
-iati-identifier 		{display:block; background-color:#000; text-align:center; font-size:1.0em; padding:15px 40px; color:#fff; margin:0 auto;}
+iati-identifier 		{display:block; background-color:#000; text-align:center; font-size:1.0em; line-height:1.5em; padding:15px 40px; color:#fff; margin:0 auto;}
 iati-identifier:before	{content:"IATI IDENTIFIER"; font-size:14px; color:#fff; display:inline-block; vertical-align:bottom; padding-right:5px;}
 iati-identifier:hover	{color:#fff;}
 iati-identifier a:focus		{color:#fff;}
