@@ -235,7 +235,7 @@ a.csv_download:hover		{background-color:#000; color:#FFF;}
 	============================================= */
 input.typeahead				{border-bottom:1px solid #000 !important;}
 input#view_search_string, input.typeahead.tt-hint		{color:#000;}
-.search_filter				{width:960px; margin:0 auto; padding:25px 18px 20px 18px; box-sizing:border-box; border:1px solid #000;}
+.search_filter				{width:960px; margin:0 auto; padding:25px 23px 14px 23px; box-sizing:border-box; border:1px solid #000;}
 .search_label				{color:#000;}
 #search_div					{color:#000;}
 a#search_link				{background-color:#000; color:#FFF;}
@@ -309,7 +309,7 @@ table.list tr:last-child td	{border:0; padding-bottom:20px;}
 table.list tr:hover		{background-color:E9E9E9;}
 table.list td:first-child	{padding-left:20px;}
 table.list td span		{display:block; padding-top:5px; color:#000; font-size:0.7em; line-height:1.0em;}
-table.list td.title		{padding:0;}
+table.list td.title		{padding:0; max-width:600px;}
 table.list td.date		{text-align:right; padding-right:20px; min-width:160px;}
 table.list td.alert_no_iati		{text-align:center; font-size:2.0em; padding:20px 0 0 0; cursor:default;}
 table.list td.alert_no_iati a	{padding:10px 0;}
