@@ -243,7 +243,7 @@ a.csv_download:hover		{background-color:rgba(115,182,255,0.49); color:#FFF;}
 /*	For url #view=search
 	============================================= */
 input#view_search_string, input.typeahead.tt-hint		{color:#FFF;}
-.search_filter				{width:960px; margin:0 auto; padding:25px 18px 20px 18px; box-sizing:border-box; border:1px solid #FFF;}
+.search_filter				{width:960px; margin:0 auto; padding:25px 23px 14px 23px; box-sizing:border-box; border:1px solid #FFF;}
 .search_label				{color:#FFF;}
 #search_div					{color:#FFF;}
 a#search_link				{background-color:rgba(0,14,32,0.7); color:#53B4ED;}
@@ -321,7 +321,7 @@ table.list tr:last-child td	{border:0; padding-bottom:20px;}
 table.list tr:hover		{background-color:rgba(0,0,0,0.4);}
 table.list td:first-child	{padding-left:20px;}
 table.list td span		{display:block; padding-top:5px; color:#999; font-size:0.7em; line-height:1.0em;}
-table.list td.title		{padding:0;}
+table.list td.title		{padding:0; max-width:600px;}
 table.list td.date		{text-align:right; padding-right:20px; min-width:160px;}
 table.list td.alert_no_iati		{text-align:center; font-size:2.0em; padding:20px 0 0 0; cursor:default;}
 table.list td.alert_no_iati a	{padding:10px 0;}
