@@ -17,7 +17,7 @@
 #view_search_test		{margin:0 auto; width:960px; padding:30px 0 400px 0;}
 input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
 .search_wrap			{display:inline-block; width:290px; margin-bottom:15px;}
-.search_wrap:nth-child(2), .search_wrap:nth-child(5)	{margin-left:15px; margin-right:15px;}
+.search_wrap:nth-child(2), .search_wrap:nth-child(5)	{margin-left:20px; margin-right:20px;}
 .search_label			{font-size:14px; padding-bottom:5px; margin-right:23px; line-height:1.2em; text-transform:uppercase;}
 .search_label img		{padding-right:7px;width:14px;height:14px;}
 
