@@ -1,6 +1,11 @@
+Development Portal (2016-10-26 shi)
+==============================
+Fixed margins for Search box
+
+
 Development Portal (2016-09-01 shi)
 ==============================
-Added maximum width for table titles for large numbers
+Added maximum width for table titles (activity, list) for large numbers
 
 
 Development Portal (2016-06-23 shi)
